# Gaming-Time-Tracker

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  game_monitor.rs  main.rs  models.rs
src/components/: Dashboard.tsx  SessionHistory.tsx
tests/: setup.ts
tests/__mocks__/: tauri.ts
tests/components/: Dashboard.test.tsx  SessionHistory.test.tsx
tests/integration/: App.test.tsx  e2e.test.tsx  integration.test.tsx  utils.test.ts
